# stunning-umbrella

./: RFC-search-embeddings.md  setup-a.sh  setup-b.sh
search-api-a/: README.md  package.json  pnpm-lock.yaml
search-api-a/src/: main.ts
search-api-a/src/search/: search.controller.ts  search.service.ts
search-api-b/: .env.example  README.md  package.json  pnpm-lock.yaml
search-api-b/src/: app.module.ts  main.ts
search-api-b/src/search/: bm25-encoder.ts  search.service.ts
search-api-b/src/types/: stopword.d.ts
search-comparison/: index.html  package-lock.json  package.json  pnpm-lock.yaml  test-cases.txt  vite.config.ts
search-comparison/src/: App.tsx  api.ts  testCases.ts  types.ts
search-comparison/src/components/: MatchCard.tsx  ResultsList.tsx  SearchForm.tsx  TimingPanel.tsx
search-embeddings-A/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  entrypoint.py  main.py  pyproject.toml  setup_index.py
search-embeddings-A/.zed/: settings.json
search-embeddings-A/embed/: article.py  course.py  event.py
search-embeddings-A/modules/: contentful.py  embedding.py  logger.py  metadata.py  pinecone_utils.py  richtext.py
search-embeddings-B/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  entrypoint.py  poc_search.py  pyproject.toml  setup_bm25.py  setup_index.py
search-embeddings-B/.zed/: settings.json
search-embeddings-B/embed/: article.py  course.py  event.py
search-embeddings-B/modules/: bm25.py  contentful.py  logger.py  richtext.py
search-embeddings-C/: .dockerignore  Dockerfile  Makefile  config.py  entrypoint.py  pyproject.toml  setup_index.py
search-embeddings-C/embed/: article.py  community.py  course.py  event.py
search-embeddings-C/modules/: contentful.py  embedding.py  getstream_vibed.py  pinecone_utils.py  stream.py  summarise.py
